# plasma-vortex-reactor

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  anomalies_summary.json  api.md  baseline_kpi.json  feasibility_gates_report.json  full_sweep_with_dynamic_ripple.csv  index.md  integrated_report.json  metrics.json  mkdocs.yml  noxfile.py  operating_envelope.csv  plasma-vortex-reactor.code-workspace  progress.ndjson  progress_dashboard.html  progress_dashboard.json  pyproject.toml  pytest.ini  requirements-plot.txt  run_report.json  sitecustomize.py  timeline.ndjson  timeline_summary.json  uq_optimized.json  uq_results.csv
artifacts/: integrated_report.json  operating_envelope_frontier.json  progress.ndjson  timeline_debug.ndjson
configs/: cost_model.json  metrics_budget.json
data/: confinement_sweep.csv
datasets/: E_mag.json  antiproton_yield_calibration.json  b_field_series.json  gamma_series.json
docs/: ABLATION.md  ARTIFACT_SCHEMA.md  METRICS_GUIDE.md  MKDOCS_USAGE.md  OPERATING_ENVELOPE.md  PAPER_OUTLINE.md  RUNBOOK.md  TUTORIAL.md  UQ-TODO-RESOLVED.ndjson  UQ-TODO.ndjson  VnV-TODO-RESOLVED.ndjson  VnV-TODO.ndjson  api.md  author_config.example.tex  paper.tex  progress_log-completed.ndjson  progress_log.ndjson  roadmap-completed.ndjson  roadmap.ndjson
examples/: scenario_edge.json  scenario_edge_case.json  scenario_high_density.json  scenario_high_load.json  scenario_high_ripple.json  scenario_low_temp.json  scenario_min.json  scenario_production.json
notebooks/: metrics_overview.ipynb
papers/: Makefile  README.md  author_config.tex  phase3_stability.tex
reactor/: __init__.py
scripts/: ablation_ripple.py  analysis_fields_plot.py  anomalies_summary.json  batch_kpi_runs.py  bench_step_loop.py  calibrate_ripple_alpha.py  compare_feasibility.py  cost_model_sweep.py  (+45 more)
(+47 files in other folders)
