[project]
name = "plasma-vortex-reactor"
version = "0.0.0"
description = "Plasma Vortex Reactor modeling and production scaling tools"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Unlicense" }
authors = [
	{ name = "arcticoder" }
]

[project.optional-dependencies]
plot = [
	"matplotlib>=3.6"
]

[project.scripts]
pv-plot-fom = "reactor.cli_entry:plot_production_fom"
pv-plot-stability = "reactor.cli_entry:plot_stability"
pv-run-report = "reactor.cli_entry:run_report"
pv-kpi = "reactor.cli_entry:production_kpi"
pv-sweep-time = "reactor.cli_entry:sweep_time"
pv-sweep-dyn = "reactor.cli_entry:sweep_dynamic_ripple"
pv-hw-runner = "reactor.cli_entry:hardware_runner"
pv-snr = "reactor.cli_entry:sensor_noise"
pv-bench = "reactor.cli_entry:bench_step_loop"
pv-build-artifacts = "reactor.cli_entry:build_artifacts"
pv-anomalies = "reactor.cli_entry:generate_timeline_anomalies"
pv-validate-schemas = "reactor.cli_entry:validate_schemas"
pv-cost-sweep = "scripts.cost_model_sweep:main"
pv-snr-prop = "scripts.snr_propagation:main"
pv-perf-budget = "scripts.performance_budget:main"
pv-envelope = "scripts.envelope_sweep:main"
pv-ablation-ripple = "scripts.ablation_ripple:main"
pv-kpi-diff = "scripts.kpi_diff:main"
pv-ndjson-csv = "scripts.ndjson_to_csv:main"
pv-dual-panel = "scripts.plot_envelope_dual_panel:main"
[tool.ruff]
line-length = 100
extend-exclude = ["notebooks/**/*.ipynb", "**/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "A", "B", "C4"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
no_implicit_optional = true
allow_redefinition = true
show_error_codes = true
strict_optional = true
explicit_package_bases = true

